Created all routes for activities
