# routes/index.js
@@ -6,4 +6,5 @@ router.get('', (req, res) => {
     res.send({ message: "Hello world!" })
 })
 router.use('/people', require('./people'))
+router.use('/activities', require('./activities'))
 module.exports = router
